Fixing line height for overlapping organisers text

--- a/static/css/desktop.css
+++ b/static/css/desktop.css
@@ -405,6 +405,6 @@ li {
 #head { min-height: 240px; overflow: auto; }
 
 .organiser {  text-decoration : none; color: #106294; }
-.cities .organisers { top:-5px; color:#555; font-size:70%; line-height:70%; margin-bottom: 1em; }
+.cities .organisers { top:-5px; color:#555; font-size:70%; margin-bottom: 1em; }
 
 #secondcities { width: 650px; margin: 0 auto; margin-bottom: 3em; }
